--- a/main.css
+++ b/main.css
@@ -1,4 +1,27 @@
+/*****************
+Main Page
+*****************/
+
 h1 { 
 	font-family: 'Roboto', sans-serif;
 	text-align: left; 
+}
+
+
+/*****************
+Sign In Page
+*****************/
+
+#form
+{
+	border: 1px solid black;
+	background-color: gray;
+	width: 30%;
+	float: left;
+	text-align: center;
+}
+#form h1
+{
+	text-align: center;
+	border-bottom: 1px solid black;
 }
