--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
-/***************
+/****************
 Main Page
-***************/
+****************/
 
 h1 { 
 	font-family: 'Roboto', sans-serif;
@@ -8,7 +8,7 @@ h1 {
 }
 
 /***************
-Sing in Page
+Sign in Page
 ***************/
 
 #form
