--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
-/****************
+/*****************
 Main Page
-****************/
+*****************/
 
 h1 { 
 	font-family: 'Roboto', sans-serif;
