--- a/main.css
+++ b/main.css
@@ -7,29 +7,22 @@ h1 {
 	text-align: left; 
 }
 
-/***************
-Sign in Page
-***************/
+/*****************
+Sign In Page
+*****************/
 
 #form
 {
-	border:2px solid black;
-	background-color: lightgray;
-	border-radius: 10px;
-	padding: 0 10px 10px 10px;
+	border: 1px solid black;
+	background-color: gray;
 	width: 30%;
-	margin: auto;
-	overflow: hidden;
-	font-family: 'Roboto' , 'sans-serif';
-	font-size: 1.2em;
+	float: left;
+	text-align: center;
 }
-
 #form h1
 {
-	border-bottom: 2px solid black;
 	text-align: center;
-	padding-bottom: 10px;
-	padding-top: 0;
+	border-bottom: 1px solid black;
 }
 
 #hyperlinks a
