--- a/main.css
+++ b/main.css
@@ -2,3 +2,56 @@ h1 {
 	font-family: 'Roboto', sans-serif;
 	text-align: left; 
 }
+
+#form
+ {
+ 	border:2px solid black;
+ 	background-color: lightgray;
+ 	border-radius: 10px;
+ 	padding: 0 10px 10px 10px;
+ 	width: 30%;
+ 	margin: auto;
+ 	overflow: hidden;
+ 	font-family: 'Roboto' , 'sans-serif';
+ 	font-size: 1.2em;
+ }
+ 
+ #form h1
+ {
+ 	border-bottom: 2px solid black;
+ 	text-align: center;
+ 	padding-bottom: 10px;
+ 	padding-top: 0;
+ }
+
+#hyperlinks a
+{
+	width: 40%;
+	float: left;
+	font-size: .5em;
+}
+
+button
+{
+	width:50%;
+	margin: 10px 25% 10px 25%;
+	border-radius: 10px;
+	background-color: slategray;
+	border: 1px solid gray;
+	height: 30px;
+	font-size: 1.2em;
+
+}
+
+label, input 
+{
+	width: 80%;
+	margin-right: 10%;
+	margin-left: 10%;
+}
+
+input
+{
+	 border-radius: 10px;
+	 height: 20px;
+}
