--- a/awards.css
+++ b/awards.css
@@ -1,7 +1,17 @@
 body {
 	font-family: 'Open Sans', sans-serif;
+	background-color: lightblue;
+	border: 4px solid;
 }
 
 #awards {
 	float: center;
+}
+
+#section {
+	text-align: center;
+}
+
+#individual {
+	display: none;
 }
