--- a/main.css
+++ b/main.css
@@ -23,26 +23,60 @@ text-align: right;
    background:#999;
 }
 
+/*****************
+Sign in Page
+*****************/
+form
+{
+	/*display: inline-flex;*/
+	/*float: right;*/
+	margin: 0 20%;
+	width: 60%;
+}
+
+.headerDesign 
+{
+	margin: auto;
+
+	width: 100%;
+	padding-left: 20px;
+	/*background-color: aliceblue;*/
+	overflow: hidden;
+	font-size: 3em;
+	/*position: absolute;*/
+}
+
+
+#form h1
+{
+	background-image: url("images/ribbon.png");
+	background-repeat: no-repeat;
+	color: white;
+	width: 100%;
+	margin: auto;
+	/*overflow: hidden;*/
+	align-items: center;
+	/*border: 1px solid black;*/
+	text-align: left;
+	display: inline-block;
+ 	float: right;
+
+}
+
 #form
  {
- 	border:2px solid black;
- 	background-color: lightgray;
+ 	/*border:2px solid black;*/
  	border-radius: 10px;
- 	padding: 0 10px 10px 10px;
- 	width: 30%;
+ 	/*padding: 0 10px 10px 10px;*/
+ 	width: 50%;
  	margin: auto;
  	overflow: hidden;
  	font-family: 'Roboto' , 'sans-serif';
- 	font-size: 1.2em;
+ 	font-size: 1em;
+ 	
  }
  
- #form h1
- {
- 	border-bottom: 2px solid black;
- 	text-align: center;
- 	padding-bottom: 10px;
- 	padding-top: 0;
- }
+
 
 #hyperlinks a
 {
@@ -51,112 +85,104 @@ text-align: right;
 	font-size: 1em;
 }
 
+#signinButton
+{
+	width:50%;
+	margin: auto;
+	border-radius: 10px;
+	background-color: slategray;
+	padding:15px;
+	font-size: 1.2em;
+
+}
+
+
+input
+{
+	 border-radius: 10px;
+	 height: 20px;
+}
+
+
+#hyperlinks a
+{
+	width: 50%;
+	font-size: 1em;
+	text-align: left;
+}
+
 button
 {
 	width:50%;
-	margin: 10px 25% 10px 25%;
+	margin: 0 auto;
 	border-radius: 10px;
-	background-color: slategray;
+	background-color: black;
 	border: 1px solid gray;
 	height: 30px;
 	font-size: 1.2em;
-
+	color:white;
 }
 
 label, input 
 {
 	width: 80%;
-	margin-right: 10%;
-	margin-left: 10%;
-}
-
-input
-{
-	 border-radius: 10px;
-	 height: 20px;
-}
-
-<<<<<<< HEAD
-#hyperlinks a
-{
-	width: 50%;
-	font-size: 1em;
-	text-align: center;
-}
-
-button
-{
-	width:50%;
-	margin: 10px 25% 10px 25%;
+	padding-left: 0;
+	padding-bottom: 5px;
+	padding-top: 5px;
+	margin: 10px 1px;
 	border-radius: 10px;
-	background-color: slategray;
-	border: 1px solid gray;
-	height: 30px;
-	font-size: 1.2em;
-
-}
-
-label, input 
-{
-	width: 70%;
-	margin-right: 15%;
-	margin-left: 15%;
-}
-
-input
-{
-	 border-radius: 10px;
 	 height: 20px;
+}
+
+#option
+{
+	font-size: 20px;
+	text-align: left;
+	/*border: 1px solid black;*/
+	width: 40%;
+	/*background-color: black;*/
+	border-radius: 10px;
+	color: black;
+	font-size: 3em;
+	margin: auto;
 }
 
 #register
 {
-	border:2px solid black;
- 	background-color: lightgray;
+	display: block;
  	border-radius: 10px;
- 	padding: 0 10px 10px 10px;
- 	width: 30%;
- 	margin: auto;
+ 	width: 50%;
  	overflow: hidden;
  	font-family: 'Roboto' , 'sans-serif';
- 	font-size: 1.2em;
- 	margin-top: 10px;
+ 	font-size: 1em;
+ 	margin: auto;
+ 
 }
 
 #register h1
 {
-	border-bottom: 2px solid black;
-	padding-bottom: 5px;
-	text-align: center;
-	font-size: 1.2em;
+	background-image: url("images/ribbon.png");
+	background-repeat: no-repeat;
+	color: white;
+	width: 100%;
+	margin: auto;
+	/*overflow: hidden;*/
+	align-items: center;
+	/*border: 1px solid black;*/
+	text-align: left;
+	display: inline-block;
+ 	float: right;
+
 }
 
-.grouping
-{
 
-	display: inline-flex;
-	float: left;
-	width: 100%;
-	padding: 5px;
-}
-.grouping label
-{
-	width: 100%;
-}
-.grouping input
-{
-	width: 100%;
-	padding: 0;
-	margin: 0;
-}
 
-=======
 /*****************
 About Page
 *****************/
 
 
-body {
+.textalignment {
 
 	text-align: center;
 }
@@ -178,7 +204,7 @@ title {
 
 }
 
-p {
+#aboutP {
 
 	font-size: 20px;
 	font-weight: bold;
@@ -188,5 +214,3 @@ p {
 	font-family:'Roboto', sans-serif;
 }
 
-
->>>>>>> master
