--- a/main.css
+++ b/main.css
@@ -125,7 +125,7 @@ button
 
 label, input 
 {
-	width: 80%;
+	width: 50%;
 	padding-left: 0;
 	padding-bottom: 5px;
 	padding-top: 5px;
@@ -138,8 +138,7 @@ label, input
 {
 	font-size: 20px;
 	text-align: left;
-	/*border: 1px solid black;*/
-	width: 40%;
+	width: 50%;
 	/*background-color: black;*/
 	border-radius: 10px;
 	color: black;
@@ -166,15 +165,37 @@ label, input
 	color: white;
 	width: 100%;
 	margin: auto;
-	/*overflow: hidden;*/
 	align-items: center;
-	/*border: 1px solid black;*/
 	text-align: left;
 	display: inline-block;
  	float: right;
-
+}
+.divider
+{
+	width: 100%;
+	display: inline-flex;
+	float: left;
+	margin: auto;
 }
 
+.divider label
+{
+	
+	width: 30%;
+	float: left;
+}
+
+.divider input
+{
+	width: 40%;
+	float: left;
+}
+
+.divider button
+{
+	width: 30%;
+	margin: 20px 50% 10px 20%;
+}
 
 
 /*****************
