--- a/main.css
+++ b/main.css
@@ -255,4 +255,4 @@ About Page
 	border: 10px solid red;
 	font-family:'Roboto', sans-serif;
 }
-<div class="footer">Team PENguin 2017 <strong>not fixed</strong>.</div>
+<div class="footer">Team PENguin 2017 <strong>not fixed</strong></div>
